--- a/style.css
+++ b/style.css
@@ -81,18 +81,17 @@ button:hover {
     background-color: #7289DA;
 }
 
-.disclaimer {
-    font-size: 0.7em;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    opacity: 0.6;
-    display: block;
-}
-
 .message {
-    background-color: white;
-    color: #2C2F33;
-    padding: 10px 20px;
+    background-color: rgba(225,225,225,0.4);
+    color: rgba(225,225,225,0.9);
+    padding: 5px 10px;
     margin-bottom: 30px;
     border-radius: 5px;
+    margin-top: 15px;
+    font-size: small;
+}
+
+.message a {
+    color: white;
+    text-decoration: underline;
 }
